--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 
@@ -21,3 +21,31 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.vscode
+.idea
+.grunt
+*.epub
+*.mobi
+*.pdf
+/.git/*
+/.htaccess
+/*.log
+/*.sql
+/*.txt
+/sitemap*.xml
+/*.dt
+/*.tar.gz
+/*.gz
+/*.tar
+/*.bak
+/*.old
+/*.csv
+/*~
+*/_*
+/_*
+*.iml
+bower_components
+package-lock.json
+/dist/
+/gulp/*.json
