--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hackathon-rsh-react",
-  "version": "0.4.2",
+  "version": "0.4.4",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.13",
@@ -11,11 +11,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-social-icons": "^5.15.0",
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1"
   },
