--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hackathon-rsh-react",
-  "version": "0.4.4",
+  "version": "0.4.6",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.13",
@@ -10,6 +10,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "flowbite": "^1.6.4",
+    "flowbite-react": "^0.4.2",
     "formik": "^2.2.9",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
