--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "hackathon-rsh-react",
-  "version": "0.4.6",
+  "version": "1.0.3",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
     "@reduxjs/toolkit": "^1.9.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
@@ -55,6 +52,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^5.0.0",
     "miragejs": "^0.1.47",
     "nanoid": "^4.0.2",
     "postcss": "^8.4.21",
